testdata/baselines/reference/submodule/conformance/ts-expect-error-nocheck.errors.txt
ts-expect-error-nocheck.ts(5,1): error TS2578: Unused '@ts-expect-error' directive.


==== ts-expect-error-nocheck.ts (1 errors) ====
    // @ts-nocheck
    
    // there should not be a "Unused @ts-expect-error" error due to the // @ts-nocheck
    
    // @ts-expect-error
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
    const a = 1;
    